tests/compile_failures/events/no_events_listed.rs
use dioxus_sugar::events;

#[events]
struct Props {
    name: String,
    id: String,
}

fn main() {}