tests/compile_failures/events/no_events_listed.stderr
error: no events were listed, remove 'events' macro or add an event
 --> tests/compile_failures/events/no_events_listed.rs:3:1
  |
3 | #[events]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `events` (in Nightly builds, run with -Z macro-backtrace for more info)
